--- a/todolist_v2/package.json
+++ b/todolist_v2/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.13",
+    "js-cookie": "^2.2.0",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -23,8 +27,11 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
+    "mockjs": "^1.1.0",
+    "node-sass": "^8.0.0",
     "prettier": "^2.8.4",
     "prettier-eslint": "^15.0.1",
+    "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
